--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  firebase_core: ^3.12.1
-  http: ^1.3.0
+  cupertino_icons: ^1.0.2
+  firebase_core: ^2.15.1
+  http: ^1.1.0
+  firebase_database: ^10.2.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
