--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^2.15.1
   http: ^1.1.0
   firebase_database: ^10.2.5
+  shared_preferences: ^2.5.3
+  intl: ^0.20.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
